--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="logo float-left">
         <!-- Uncomment below if you prefer to use an image logo -->
         <!--<h1 class="text-light"><a href="#intro" class="scrollto"><span>艾可智能</span></a></h1>  -->
-        <a href="#header" class="scrollto"><img src="img/logo.png" alt="" class="img-fluid"></a>
+        <a href="#header" class="scrollto"><img src="https://cdn.jsdelivr.net/gh/aiikk/cdn@1.0/img/logo.png" alt="" class="img-fluid"></a>
       </div>
 
       <nav class="main-nav float-right d-none d-lg-block">
